--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ greenlet==1.1.2
 h11==0.13.0
 idna==3.3
 pydantic==1.9.0
+python-multipart==0.0.5
 ramda==0.6.5
+six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.31
 sqlalchemy2-stubs==0.0.2a20
