--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ idna==3.3
 pydantic==1.9.0
 python-dotenv==0.20.0
 python-multipart==0.0.5
+ramda==0.7.3
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.31
@@ -19,5 +20,5 @@ sqlalchemy2-stubs==0.0.2a20
 sqlmodel==0.0.6
 starlette==0.17.1
 toolz==0.11.2
-typing_extensions==4.1.1
+typing-extensions==4.1.1
 uvicorn==0.17.5
