--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,24 @@ version: "3.9"
 
 services:
   sqlite:
-    image: nouchka/sqlite3:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+    working_dir: /socialnetwork_api
     env_file:
       - .env
-    command: python database.py # !TODO need fix
+    entrypoint: ["python" , "database.py"]
+
     volumes:
-      - "/socialnetwork_api" # !TODO incorrect volume usage
+      - .:/socialnetwork_api
     depends_on:
       - instafood_api
+
   instafood_api:
-    build: .
-    command: python ./main.py
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - .env
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
