[upd] updated readme instructions / changes in default env values / expose ports in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,5 +27,8 @@ services:
       - data:/socialnetwork_api
     env_file:
       - .env
+    expose:
+      - "80"
+      - "8000"
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
