--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,26 @@
 anyio==3.5.0
 asgiref==3.5.0
+bcrypt==3.2.0
+cffi==1.15.0
 click==8.0.3
 colorama==0.4.4
 dnspython==2.2.0
+ecdsa==0.17.0
 email-validator==1.1.3
 fastapi==0.74.0
 future==0.18.2
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
+passlib==1.7.4
+pyasn1==0.4.8
+pycparser==2.21
 pydantic==1.9.0
 python-dotenv==0.20.0
+python-jose==3.3.0
 python-multipart==0.0.5
 ramda==0.7.3
+rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.31
@@ -20,5 +28,5 @@ sqlalchemy2-stubs==0.0.2a20
 sqlmodel==0.0.6
 starlette==0.17.1
 toolz==0.11.2
-typing-extensions==4.1.1
+typing_extensions==4.1.1
 uvicorn==0.17.5
